--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
+theme: jekyll-theme-minimal
 markdown: kramdown
 highlighter: rouge
 
 title: Personal Page of Moonsoo Ra
+
+gem "github-pages", group: :jekyll_plugins
