--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ highlighter: rouge
 
 title: Moonsoo Ra
 logo: /portrait.png
-description: Moonsoo Ra received the B.S. and Ph.D. degrees in Electronics and Computer Engineering at [Hanyang University](http://www.hanyang.ac.kr/), Seoul, Korea, in 2011 and 2019, respectively. He is currently working as founding member and CTO of LightVision Inc. His research interests include pattern recognition, machine learning, autonomous vehicle, and video surveillance.
+description: Moonsoo Ra received the B.S. and Ph.D. degrees in Electronics and Computer Engineering at Hanyang University, Seoul, Korea, in 2011 and 2019, respectively. He is currently working as founding member and CTO of LightVision Inc. His research interests include pattern recognition, machine learning, autonomous vehicle, and video surveillance.
 theme: jekyll-theme-minimal
